Add Reset Password page - refactor all order modules, main order modules: apis/magen/service/validation/widgets - add reset form component - add invalid input/submit error  message box - apply reset password api

--- a/css/all.css
+++ b/css/all.css
@@ -5892,7 +5892,7 @@ body.registration-distributor-success {
 .paypal-express-remark {
     margin-top: 10px;
 }
-.customer-password-change .input-hint {
+.input-invalid-hint {
     font-size: 13px;
     display: block;
     margin-top: 5px;
