--- a/js/src/components/changePW/change.pw.form.html
+++ b/js/src/components/changePW/change.pw.form.html
@@ -1,6 +1,15 @@
 
-<div>
-    <form id="form-validate" name="vm.changePwForm" novalidate>
+<ul ng-if="vm.formInvalid" class="messages">
+    <li class="error-msg">
+        <ul>
+            <li>
+                <span ng-bind="vm.formInvalidMsg"></span>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<form id="form-validate" name="vm.changePwForm" novalidate>
     <div class="fieldset">
         <input name="form_key" type="hidden" value="L3eJjwwejLAh7lge" />
         <ul class="form-list">
@@ -9,6 +18,8 @@
                     <label for="current">請輸入現有密碼</label>
                     <div class="input-box">
                         <input type="number"
+                               pattern="[0-9]*"
+                               inputmode="numeric"
                                name="current"
                                id="current" value=""
                                class="input-text required-entry validate-password secure-input"
@@ -19,13 +30,13 @@
                                ga-track
                                track-action="on_focus"
                                track-label="current_password" />
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.current.$error.required && vm.changePwForm.current.$touched">
                             必須填入密碼
                         </span>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.current.$error.pwCount && vm.changePwForm.current.$touched">
-                            必須為四位數字
+                            必須為4位數字
                         </span>
                     </div>
                 </div>
@@ -35,6 +46,8 @@
                     <label for="new">請輸入新密碼</label>
                     <div class="input-box">
                         <input type="number"
+                               pattern="[0-9]*"
+                               inputmode="numeric"
                                name="new"
                                id="new"
                                value=""
@@ -46,13 +59,13 @@
                                ga-track
                                track-action="on_focus"
                                track-label="new_password"/>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.new.$error.required && vm.changePwForm.new.$touched">
                             必須填入密碼
                         </span>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.new.$error.pwCount && vm.changePwForm.new.$touched">
-                            必須為四位數字
+                            必須為4位數字
                         </span>
                     </div>
                 </div>
@@ -62,6 +75,8 @@
                     <label for="confirmNew">再次輸入新密碼</label>
                     <div class="input-box">
                         <input type="number"
+                               pattern="[0-9]*"
+                               inputmode="numeric"
                                name="confirmNew"
                                id="confirmNew"
                                value=""
@@ -75,15 +90,15 @@
                                ga-track
                                track-action="on_focus"
                                track-label="confirm_password"/>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.confirmNew.$error.required && vm.changePwForm.confirmNew.$touched">
                             必須填入密碼
                         </span>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.confirmNew.$error.pwCount && vm.changePwForm.confirmNew.$touched">
-                            必須為四位數字
+                            必須為4位數字
                         </span>
-                        <span class="input-hint"
+                        <span class="input-invalid-hint"
                               ng-if="vm.changePwForm.confirmNew.$error.pwConfirm && vm.changePwForm.confirmNew.$touched">
                             確認的新密碼不相符，請再次輸入
                         </span>
@@ -93,7 +108,6 @@
             <li class="fields centered">
                 <div class="field">
                     <button id="change-pw-btn" type="submit" title="更改密碼" class="button"
-                            data-track="click:change_password"
                             ga-track
                             track-action="click"
                             track-label="change_password"><span><span id="submit-button-text">更改密碼</span></span></button>
@@ -103,4 +117,3 @@
 
     </div>
 </form>
-</div>
