add order modules to team manager page - refactor team manager the files of structure - add success message box in change/reset pw pages, it will be displayed when the requests successfully - rename service for order modules

--- a/js/src/components/resetPW/reset.pw.form.html
+++ b/js/src/components/resetPW/reset.pw.form.html
@@ -7,6 +7,15 @@
         </ul>
     </li>
 </ul>
+<ul ng-if="vm.successSubmit && !vm.formInvalid" class="messages">
+    <li class="success-msg">
+        <ul>
+            <li>
+                <span ng-bind="vm.successSubmitMsg"></span>
+            </li>
+        </ul>
+    </li>
+</ul>
 
 <form id="form-validate" name="vm.resetPwForm" novalidate>
     <div class="fieldset">
