--- a/js/src/components/changePW/change.pw.form.html
+++ b/js/src/components/changePW/change.pw.form.html
@@ -8,6 +8,15 @@
         </ul>
     </li>
 </ul>
+<ul ng-if="vm.successSubmit && !vm.formInvalid" class="messages">
+    <li class="success-msg">
+        <ul>
+            <li>
+                <span ng-bind="vm.successSubmitMsg"></span>
+            </li>
+        </ul>
+    </li>
+</ul>
 
 <form id="form-validate" name="vm.changePwForm" novalidate>
     <div class="fieldset">
